--- a/src/components/news/style/News.css
+++ b/src/components/news/style/News.css
@@ -7,3 +7,11 @@ h4{
     display: flex;
     justify-content: center;
 }
+
+
+.noticias{
+    max-inline-size: 100%;
+    block-size: auto;
+    aspect-ratio: 4/1;
+    object-fit:scale-down;
+}
