--- a/src/components/nombre_evento/style/NombreEvento.css
+++ b/src/components/nombre_evento/style/NombreEvento.css
@@ -4,5 +4,5 @@
     display: block;
     padding: 50px;
     color: white;
-    background: linear-gradient(0.25turn, #97d994, #f4face);
+    background: linear-gradient(0.25turn, #65c674, #f4face);
 }
