--- a/src/components/footer/style/Footer.css
+++ b/src/components/footer/style/Footer.css
@@ -1,7 +1,23 @@
 .footer{
     width: auto;
-    height: 180px;
-    display: block;
+    height: auto;
     justify-content: flex-start;
     background-color: #2eca6b;
+}
+
+.patrocinador, .colaboración{
+    margin-left: 2em;
+    margin-top: 1em;
+    font-size: 10px;
+    color: white;
+}
+
+.ideafest, .casfid, .congress, .cars, .enter{
+    width: auto;
+    height: 70px;
+    display: inline-flex;
+}
+
+.congress, .cars, .enter{
+    margin-left: 13px;
 }
